improvement: switched customer address selection ui control to 'lms-ui-advanced-select'

--- a/css/less/advanced-select.less
+++ b/css/less/advanced-select.less
@@ -53,6 +53,15 @@
       }
     }
   }
+  &.lms-ui-customer-address-select {
+    .chosen-single span {
+      padding-top: 1px;
+      padding-bottom: 1px;
+    }
+    .chosen-results li {
+      padding: 3px 6px;
+    }
+  }
   .chosen-drop {
     display: none;
     background-color: @lucid;
