--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -611,17 +611,15 @@
 		$('#linktype,#radiosector,#linktechnology,#linkspeed').prop('disabled', false);
 	}
 
-    var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
-
     /*!
      * \brief Update addresses list on customer input change.
      */
     function customer_change() {
         getCustomerAddresses($("#customerid_input").val(), function(addresses) {
-            customer_addresses.setAddressList(addresses);
+            setAddressList('#customer_addresses', addresses);
         });
     }
 
-    customer_addresses.init();
+	initAdvancedSelects('#customer_addresses');
 
 </script>
