--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -292,7 +292,7 @@
 
     var remove_number      = '{$remove_number}';
     var pool_number_select = '{$pool_number_select}';
-    var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
+    initAdvancedSelects("#customer_addresses");
 
     function checkIfTerritLocation() {
         {if ConfigHelper::checkConfig('phpui.teryt_required')}
@@ -358,19 +358,18 @@
      */
     function customer_change() {
         getCustomerAddresses($('[name="voipaccountedit[ownerid]"]').val(), function(addresses) {
-            customer_addresses.setAddressList( addresses );
+            setAddressList("#customer_addresses", addresses);
             checkIfTerritLocation();
         });
     }
 
     getCustomerAddresses($('[name="voipaccountedit[ownerid]"]').val(), function(addresses) {
-        customer_addresses.setAddressList(addresses);
+        setAddressList("#customer_addresses", addresses);
 
         {if $voipaccountinfo.address_id}
-        $( '#customer_addresses' ).val( {$voipaccountinfo.address_id} );
+            $('#customer_addresses').val({$voipaccountinfo.address_id});
+            updateAdvancedSelects("#customer_addresses");
         {/if}
-
-        customer_addresses.init();
 
         checkIfTerritLocation();
     });
