--- a/templates/default/event/eventmodify.html
+++ b/templates/default/event/eventmodify.html
@@ -331,25 +331,22 @@
 			{/if}
 		{/if}
 
-		var customer_addresses = new LmsUiIconSelectMenu("#customer_addresses", {
-			change: function (event, ui) {
-				xajax_select_location($('[name="event[custid]"]').val(), $(this).val());
-			}
+		initAdvancedSelects('#customer_addresses');
+		$('#customer_addresses').chosen().change(function() {
+			xajax_select_location($('[name="event[custid]"]').val(), $(this).val());
 		});
 
-		customer_addresses.init();
-
 		{if $layout.module == 'eventedit'}
-		function change_customer(customer_selector, address_selector) {
-			getCustomerAddresses($(customer_selector).val(), function (addresses) {
-				customer_addresses.setAddressList(addresses);
-				if (Object.keys(addresses).length == 1) {
-					$('#customer_addresses').val($('#customer_addresses option:last-child').val());
-					customer_addresses.refresh();
-				}
-				xajax_select_location($(customer_selector).val(), $(address_selector).val());
-			});
-		}
+			function change_customer(customer_selector, address_selector) {
+				getCustomerAddresses($(customer_selector).val(), function (addresses) {
+					setAddressList('#customer_addresses', addresses);
+					if (Object.keys(addresses).length == 1) {
+						$('#customer_addresses').val($('#customer_addresses option:last-child').val());
+						updateAdvancedSelects('#customer_addresses');
+					}
+					xajax_select_location($(customer_selector).val(), $(address_selector).val());
+				});
+			}
 		{/if}
 		//initCustomerSelection('{$event.customerid}', '{$ticket.address_id}');
 
