--- a/templates/default/invoice/invoicenew.html
+++ b/templates/default/invoice/invoicenew.html
@@ -329,8 +329,6 @@
 
 <script>
 
-	var customer_addresses = new LmsUiIconSelectMenu( "#customer_addresses" );
-
 	/*!
 	 * \brief Update customer addresses list on select change.
 	 * Using when big_networks is set as false.
@@ -360,12 +358,12 @@
 
 	function customer_change() {
 		getCustomerAddresses($('#ownerid_input').val(), function(addresses) {
-			customer_addresses.setAddressList( addresses, false );
+			setAddressList('#customer_addresses', addresses);
 		});
 		updateDocumentFlags();
 	}
 
-	customer_addresses.init();
+	initAdvancedSelects('#customer_addresses');
 
 	$(function() {
 		$('form[name="setcustomer"] [name="invoice[number]"]').focus();
