improvement: minor history redirect improvement in nodeedit module

--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -545,7 +545,7 @@
 		<tr>
 			<td class="lms-ui-box-buttons" colspan="3">
 				{button type="submit" icon="save" label="Submit"}
-				{button icon="cancel" label="Cancel" href="?m=nodeinfo&id={$nodeinfo.id}"}
+				{button icon="cancel" label="Cancel" href="{$backurl}"}
 			</td>
 		</tr>
     </tbody>
