--- a/templates/default/netdev/netdevtickets.html
+++ b/templates/default/netdev/netdevtickets.html
@@ -3,7 +3,7 @@
     <THEAD>
 	<TR class="hand lmsbox-titlebar" data-lmsbox-content="netdevticketpanel">
 		<TD class="bold">
-			{icon name="helpdesk" class="lms-ui-sortable-handle"}{trans("Assigned tickets:")}
+			{icon name="helpdesk" class="lms-ui-sortable-handle" label="Assigned tickets:"}
 			({if !empty($queue)}{count($queue)}{else}0{/if})
 		</TD>
 		<TD class="text-right nobr">
