improvement: only allow scans with configured types (variable:  phpui.allowed_documents_scan_filetypes, default='application/pdf, images/jpeg, images/jpg')

--- a/templates/default/document/documentscanadd.html
+++ b/templates/default/document/documentscanadd.html
@@ -72,7 +72,7 @@
 			{trans("Files:")}
 		</TD>
 		<TD>
-			{fileupload id="attachments" fileupload=$fileupload form="documentscanadd-form"}
+			{fileupload id="attachments" fileupload=$fileupload form="documentscanadd-form" accept=$allow_files}
 		</TD>
 	</TR>
 	{if !empty($files)}
