--- a/userpanel/modules/documents/style/bclean/templates/documents.html
+++ b/userpanel/modules/documents/style/bclean/templates/documents.html
@@ -62,7 +62,10 @@
 				<div class="form-group">
 					<form method="post" action="?m=documents" id="newscan-form" name="newscan" enctype="multipart/form-data">
 						<label for="scans" class="font-weight-bold">{trans("Select scan file:")}</label>
-						<input type="file" name="files[]" id="scans" {userpaneltip class="form-control-file" text="Enter path to file or click 'Browse' button" trigger="files"} multiple />
+						<input type="file" name="files[]" id="scans"
+							{userpaneltip class="form-control-file" text="Enter path to file or click 'Browse' button" trigger="files"}
+							accept="application/pdf,image/jpeg,image/png"
+							multiple>
 						<input type="hidden" id="post_max_size" value="{$post_max_size.bytes}">
 						<input type="hidden" id="upload_max_filesize" value="{$upload_max_filesize.bytes}">
 						<div id="file-status" class="alert alert-danger"{if !isset($error.files)} style="display: none;"{/if}>
@@ -184,19 +187,24 @@
 		$('#newscan-dialog').modal('show');
 		{/if}
 
-		function check_file_sizes() {
-			var scans = $('#scans').get(0);
+		function check_file_attachments() {
+			var scans = $('#scans');
 			$('#file-status').hide().text();
-			if (scans.files.length) {
+			if (scans.get(0).files.length) {
 				var error = '';
 				var post_max_size = parseInt($('#post_max_size').val());
 				var upload_max_filesize = parseInt($('#upload_max_filesize').val());
 				var total_size = 0;
-				$.each(scans.files, function (index, file) {
+				var acceptedFileTypes = scans.attr('accept').split(',');
+				$.each(scans.get(0).files, function (index, file) {
 					if (upload_max_filesize && file.size > upload_max_filesize) {
 						error = '{trans("One from files is too large!")}';
 					}
 					total_size += file.size;
+
+					if (acceptedFileTypes.indexOf(file.type) == -1) {
+						error = '{trans("One from files has invalid type!")}';
+					}
 				});
 				if (post_max_size && total_size > post_max_size) {
 					error = '{trans("Total file size is too large!")}';
@@ -212,11 +220,11 @@
 		}
 
 		$('#scans').change(function() {
-			$('#newscan-dialog .submit-button').prop('disabled', !check_file_sizes());
+			$('#newscan-dialog .submit-button').prop('disabled', !check_file_attachments());
 		});
 
 		$('#newscan-dialog .submit-button').click(function() {
-			if (check_file_sizes()) {
+			if (check_file_attachments()) {
 				document.newscan.submit();
 			}
 		});
