--- a/templates/default/event/eventschedulebox.html
+++ b/templates/default/event/eventschedulebox.html
@@ -7,8 +7,8 @@
 {foreach $daylist as $day}
 <TABLE id="event-day-{$day}" class="lmsbox lms-ui-background-cycle event-day-table">
     <COLGROUP>
-        <COL style="width: 1%; vertical-align: top; text-align: center;">
-        {for $foo=1 to ($usereventlistcount - 1)}
+        <COL style="width: 0.1%; vertical-align: top; text-align: center;">
+        {for $foo=1 to ($usereventlistcount)}
         <COL style="width: 1%; vertical-align: top;">
         {/for}
     </COLGROUP>
