enhancement: new configuration variable 'invoices.default_author' (default value: 'user_issuer,user_name,division_author') controls order of expositor name determination

--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -539,16 +539,7 @@
 			</td>
 			<td width="50%" align="right" rowspan="2">
 				{if !ConfigHelper::checkConfig('invoices.hide_expositor')}
-					{trans("Expositor:")}
-					{if $invoice.issuer}
-						{$invoice.issuer|escape}
-					{elseif $invoice.user}
-						{$invoice.user|escape}
-					{elseif $invoice.division_author}
-						{$invoice.division_author|escape}
-					{else}
-						{trans("system")}
-					{/if}
+					{t a=$invoice.expositor}Expositor: <b>$a</b>{/t}
 				{/if}
 			</td>
 		</tr>
