improvement: more precise table headers of uke income report

--- a/templates/default/print/printukeincome.html
+++ b/templates/default/print/printukeincome.html
@@ -26,7 +26,7 @@
 			{/if}
 		</TD>
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Bussiness customers")}
+			{trans("<!uke-income>Bussiness services")}
 		</TD>
 		{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
@@ -34,7 +34,7 @@
 		</TD>
 		{/if}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Private customers")}
+			{trans("<!uke-income>Private services")}
 		</TD>
 		{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
@@ -42,7 +42,7 @@
 		</TD>
 		{/if}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Total customers")}
+			{trans("<!uke-income>Total sevices")}
 		</TD>
 		{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
